--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,12 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     
   </head>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    
   <body>
+    <%= render 'layouts/navigation'%>
+    <div id="messages-container">
+      <%= render 'layouts/messages' %>
+    </div>
     <%= yield %>
   </body>
 </html>
