--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -25,3 +25,11 @@
 #messages-container {
   
 }
+
+.name {
+  color: rgb(22, 21, 21);
+}
+.name:hover {
+  color: grey;
+  text-decoration: none;
+}
