--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,7 @@
   <h1><%= t('.title', resource: resource_name.to_s.humanize) %></h1>
 
   <div class="form-group">
-    <%= f.label :username %>
+    <%= f.label :username %><br />
     <%= f.text_field :username, autofocus: true, autocomplete: 'username' %>
   </div>
 
@@ -41,8 +41,9 @@
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p><%= button_to "Delete my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
+
+<%= render 'stuffs/stuffs'%>
