--- a/app/views/stuffs/index.html.erb
+++ b/app/views/stuffs/index.html.erb
@@ -1,30 +1,6 @@
 
 <h1>Stuffs</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Found date</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @stuffs.each do |stuff| %>
-      <tr>
-        <td><%= stuff.title %></td>
-        <td><%= stuff.description %></td>
-        <td><%= stuff.found_date %></td>
-        <td><%= link_to 'Show', stuff %></td>
-        <td><%= link_to 'Edit', edit_stuff_path(stuff) %></td>
-        <td><%= link_to 'Destroy', stuff, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+<%= render 'stuffs' %>
 
 <%= link_to 'New Stuff', new_stuff_path %>
