--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,6 +7,11 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
+          <%= link_to 'Users', show_users_path, class:'nav-link'%>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item">
           <a class="nav-link" href="#">About</a>
         </li>
       </ul>
