--- a/app/views/stuffs/_stuffs.html.erb
+++ b/app/views/stuffs/_stuffs.html.erb
@@ -15,8 +15,8 @@
         <td><%= stuff.description %></td>
         <td><%= stuff.found_date %></td>
         <td><%= link_to 'Show', stuff %></td>
-        <td><%= link_to 'Edit', edit_stuff_path(stuff) %></td>
-        <td><%= link_to 'Destroy', stuff, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <!--<td><%= link_to 'Edit', edit_stuff_path(stuff) %></td>
+        <td><%= link_to 'Destroy', stuff, method: :delete, data: { confirm: 'Are you sure?' } %></td>-->
       </tr>
     <% end %>
   </tbody>
