--- a/app/views/stuffs/edit.html.erb
+++ b/app/views/stuffs/edit.html.erb
@@ -3,4 +3,5 @@
 <%= render 'form', stuff: @stuff %>
 
 <%= link_to 'Show', @stuff %> |
-<%= link_to 'Back', stuffs_path %>
+<%= link_to 'Back', stuffs_path %> |
+<%= link_to 'Remove', stuff_path(@stuff), method: :delete, data: {confirm: 'Are you sure'} %>
