--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,21 @@
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= bootstrap_devise_error_messages! %>
+  <div class="wrapper">
+    <div class="form-signin shadow">
+      <h2 class="form-signin-heading text-center"><%= t('.forgot_your_password') %></h2>
 
-  <h1><%= t('.forgot_your_password') %></h1>
+      <div class="form-group">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', placeholder: "email@example.com" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+      <div class="form-group">
+        <%= f.submit t('.send_me_reset_password_instructions'), class: 'btn btn-primary' %>
+      </div>
+      
+      <%= render "devise/shared/links" %>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    </div>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
