--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,31 +1,47 @@
 <nav class="navbar navbar-expand-xl py-3 navbar-light bg-light" id="navbar">
   <%= link_to "FindLost", root_path, class:"navbar-brand text-warning" %>
-  <% if current_user %>
     <button class="navbar-toggler custom-toggler bg-iconnav rounded" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <%= link_to 'Users', show_users_path, class:'nav-link'%>
-        </li>
-      </ul>
-      <ul class="navbar-nav">
-        <li class="nav-item">
           <a class="nav-link" href="#">About</a>
         </li>
       </ul>
-      <ul class="navbar-nav ml-auto">
-        <li class="user-name nav-item">
-          <%= fa_icon 'user' %> <%= link_to current_user.full_name, edit_user_registration_path, class:'name' %> <%= "(Admin)" if current_user.admin? %>
-        </li>
-        <li class="log-out nav-item">
-          <%= link_to("Logout", destroy_user_session_path,
-              class:"btn btn-xs btn-danger logout-button", method: :delete) %>
-        </li>
-      </ul>
+      <% if current_user %>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <%= link_to 'Categories', categories_path, class:"nav-link" %>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <% if user_signed_in? == current_user.admin? %>
+            <li class="nav-item">
+              <%= link_to 'Users', show_users_path, class:"nav-link" %>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <%= link_to 'Categories', categories_path, class:"dropdown-item" %>  
+                <%= link_to 'Create category', new_category_path, class:"dropdown-item" %>  
+              </div>
+            </li>
+          <% end %>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+          <li class="user-name nav-item">
+            <%= fa_icon 'user' %> <%= link_to current_user.full_name, edit_user_registration_path, class:'name' %> <%= "(Admin)" if current_user.admin? %>
+          </li>
+          <li class="log-out nav-item">
+            <%= link_to("Logout", destroy_user_session_path,
+                class:"btn btn-xs btn-danger logout-button", method: :delete) %>
+          </li>
+        </ul>
+      <% end %>
     </div>
-  <% end %>
   <% if not user_signed_in? %>
     <ul class="navbar-nav ml-auto">
       <li class="log-in nav-item">
