--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,7 +1,6 @@
 <h1 class="text-center mt-4">Categories</h1>
-
   <% @categories.each do |category| %>
-    <div class="card mx-auto text-center shadow mb-5 bg-white rounded">
+    <div class="container card text-center shadow mb-5 rounded" id="category-index">
       <div class="card-body">
         <h5 class="card-title"><%= link_to category.category_name, category_path(category) %></h5>
       </div>
