--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -12,14 +12,17 @@
 <% end %>
 
 <%= form_with(model: @category, local: true, class: "form-category") do |form| %>
+  <div class="wrapper">
+    <div class="form-signin shadow">
 
-  <div class="field">
-    <%= form.label :category_name %>
-    <%= form.text_field :category_name %>
+    <div class="form-group">
+      <%= form.label :category_name %>
+      <%= form.text_field :category_name, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= form.submit class: "submit-btn", class: 'btn btn-primary' %>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= form.submit class: "submit-btn" %>
-  </div>
-
+</div>
 <% end %>
