--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,28 +9,32 @@
           <a class="nav-link" href="#">About</a>
         </li>
       </ul>
-      <% if current_user %>
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <%= link_to 'Categories', categories_path, class:"nav-link" %>
-          </li>
-        </ul>
-        <ul class="navbar-nav">
+      <ul class="navbar-nav">
+        <% if current_user %>
           <% if user_signed_in? == current_user.admin? %>
             <li class="nav-item">
               <%= link_to 'Users', show_users_path, class:"nav-link" %>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
+                Categories
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <%= link_to 'Categories', categories_path, class:"dropdown-item" %>  
+                <%= link_to 'Show categories', categories_path, class:"dropdown-item" %>  
                 <%= link_to 'Create category', new_category_path, class:"dropdown-item" %>  
               </div>
             </li>
           <% end %>
-        </ul>
+        <% end %>
+      </ul>
+      <% if current_user %>
+        <% if !current_user.admin? %>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <%= link_to 'Categories', categories_path, class:"nav-link", admin: false %>
+            </li>
+          </ul>
+        <% end %>
         <ul class="navbar-nav ml-auto">
           <li class="user-name nav-item">
             <%= fa_icon 'user' %> <%= link_to current_user.full_name, edit_user_registration_path, class:'name' %> <%= "(Admin)" if current_user.admin? %>
