--- a/app/views/stuffs/_form.html.erb
+++ b/app/views/stuffs/_form.html.erb
@@ -13,7 +13,7 @@
   <div class="field">
     <%= form.label :category, "Select category" %>
     <%= form.collection_select(:category_ids, Category.all, :id, :category_name,
-            {prompt: false}, { multiple: true, size: 1, class:"custom-select" }) %>
+            { prompt: true }, { class:"custom-select" }) %>
   </div>
 
   <div class="field">
