--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,6 +4,9 @@
       <div class="card-body">
         <h5 class="card-title"><%= link_to category.category_name, category_path(category) %></h5>
       </div>
+      <div class="card-footer text-muted">
+        <%= pluralize(category.stuffs.count, "stuffs") %>
+      </div>
     </div>
   <% end %>
 </div>
