added option for upload images

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     
   </head>
     
-  <body>
+  <body class="d-flex flex-column justify-align-center">
     <%= render 'layouts/navigation'%>
     <div id="messages-container">
       <%= render 'layouts/messages' %>
