--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -9,8 +9,8 @@
       <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: 'form-control' %>
     </div>
 
-    <div class="form-group">
-      <%= f.submit t('.resend_confirmation_instructions'), class: 'btn btn-primary' %>
+    <div class="actions">
+      <%= f.submit "Resend confirmation", class: 'btn btn-primary' %>
     </div>  
 
     <div class="dropdown-divider"></div>
