--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,8 +1,10 @@
 <nav class="navbar navbar-expand-xl py-3 navbar-light bg-light" id="navbar">
   <%= link_to "FindLost", root_path, class:"navbar-brand text-warning" %>
-    <button class="navbar-toggler custom-toggler bg-iconnav rounded" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <% if current_user %>
+      <button class="navbar-toggler custom-toggler bg-iconnav rounded" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    <% end %>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
