--- a/app/views/stuffs/_stuffs.html.erb
+++ b/app/views/stuffs/_stuffs.html.erb
@@ -3,6 +3,7 @@
     <tr>
       <th>Title</th>
       <th>Description</th>
+      <th>Image</th>
       <th>Found date</th>
       <th colspan="3"></th>
     </tr>
@@ -13,6 +14,8 @@
       <tr>
         <td><%= stuff.title %></td>
         <td><%= stuff.description %></td>
+        <td><%= image_tag(stuff.stuff_image) %></td>
+        <!--<td><p style="height:55%"><%= stuff.image %></p></td>-->
         <td><%= stuff.found_date %></td>
         <td><%= link_to 'Show', stuff %></td>
         <!--<td><%= link_to 'Edit', edit_stuff_path(stuff) %></td>
