--- a/app/views/stuffs/edit.html.erb
+++ b/app/views/stuffs/edit.html.erb
@@ -1,6 +1,41 @@
 <h1>Editing Stuff</h1>
 
-<%= render 'form', stuff: @stuff %>
+<%= form_with(model: @stuff, local: true) do |form| %>
+
+  <div class="field">
+    <%= form.label :title %>
+    <%= form.text_field :title %>
+  </div>
+
+  <div class="field">
+    <%= form.label :description %>
+    <%= form.text_area :description %>
+  </div>
+
+  <div class="field">
+    <%= image_tag(@stuff.stuff_image) if @stuff.image.attached? %>
+  </div>
+
+  <div class="field">
+    <%= form.file_field :image %>
+  </div>
+
+  <div class="field">
+    <%= form.label :category, "Select category" %>
+    <%= form.collection_select(:category_ids, Category.all, :id, :category_name,
+            { prompt: true }, { class:"custom-select" }) %>
+  </div>
+
+  <div class="field">
+    <%= form.label :found_date %>
+    <%= form.date_select :found_date %>
+  </div>
+
+  <div class="actions">
+    <%= form.submit %>
+  </div>
+<% end %>
+
 
 <%= link_to 'Show', @stuff %> |
 <%= link_to 'Back', stuffs_path %> |
