--- a/app/views/stuffs/new.html.erb
+++ b/app/views/stuffs/new.html.erb
@@ -2,6 +2,38 @@
 
 <h1>New Stuff</h1>
 
-<%= render 'form', stuff: @stuff %>
+<%= form_with(model: @stuff, local: true) do |form| %>
+
+  <div class="field">
+    <%= form.label :title %>
+    <%= form.text_field :title %>
+  </div>
+
+  <div class="field">
+    <%= form.label :description %>
+    <%= form.text_area :description %>
+  </div>
+
+  <div class="field">
+    <%= form.label :image %>
+    <%= form.file_field :image %>
+  </div>
+
+  <div class="field">
+    <%= form.label :category, "Select category" %>
+    <%= form.collection_select(:category_ids, Category.all, :id, :category_name,
+            { prompt: true }, { class:"custom-select" }) %>
+  </div>
+
+  <div class="field">
+    <%= form.label :found_date %>
+    <%= form.date_select :found_date %>
+  </div>
+
+  <div class="actions">
+    <%= form.submit %>
+  </div>
+<% end %>
+
 
 <%= link_to 'Back', stuffs_path %>
