--- a/app/views/stuffs/edit.html.erb
+++ b/app/views/stuffs/edit.html.erb
@@ -18,7 +18,42 @@
 
   <div class="field">
     <%= form.file_field :image %>
+  </div>  
+
+  <!--<div class="position-relative mr-3 text-center file-preview" style="width: min-content;">
+    <div class="img-thumbnail">
+      <%= image_tag(@stuff.stuff_image) if @stuff.image.attached?  %>
+      <button style="top: 5px; right: 5px;" class="btn btn-sm btn-danger position-absolute" onclick="$(this).closest('.file-preview').remove()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <input class="d-none"  type="file" name="stuff[images]">
   </div>
+
+
+  <div id="file-list" class="mb-2 d-flex"></div>
+
+  <label for="stuff_image" class="btn btn-warning">Upload</label>
+  <input
+    id="stuff_image"
+    type="file"
+    name="stuff[image]"
+    class="d-none"
+    onchange="window.breakIntoSeparateFiles(this, '#file-list', '#file-preview')"
+  />
+
+  <template id="file-preview">
+    <div class="position-relative mr-3 text-center file-preview" style="width: min-content;">
+      <div class="img-thumbnail">
+        <%= image_tag(@stuff.stuff_image) if @stuff.image.attached?  %>
+        <button style="top: 5px; right: 5px;" class="btn btn-sm btn-danger position-absolute" onclick="$(this).closest('.file-preview').remove()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+
+      <input class="d-none"  type="file" name="stuff[images]">
+    </div>
+  </template>-->
 
   <div class="field">
     <%= form.label :category, "Select category" %>
