--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -78,20 +78,27 @@
   max-width: 500px;
 }
 
-
+//dropzone
 .dropzone {
   border: 2px dashed #dedede;
   border-radius: 5px;
   background: #f5f5f5;
 }
-
 .dropzone i{
   font-size: 5rem;
 }
-
 .dropzone .dz-message {
   color: rgba(0,0,0,.54);
   font-weight: 500;
   font-size: initial;
   text-transform: uppercase;
+}
+
+
+.card {
+  padding: 1em;
+}
+
+.btn-primary p {
+  color: white;
 }
