--- a/app/views/stuffs/_stuffs.html.erb
+++ b/app/views/stuffs/_stuffs.html.erb
@@ -17,3 +17,6 @@
     </div>
   <% end %>
 </div>
+<div class="container rounded apple_pagination mb-4" id="pagination-container">
+  <%= will_paginate @stuffs, :container => false %>
+</div>
