--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,11 @@
       </div>
 
       <div class="form-group">
+        <%= f.label :phone_number %>
+        <%= f.text_field :phone_number, autofocus: true, autocomplete: 'username', class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
         <%= f.label :password %>
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
