--- a/app/views/stuffs/show.html.erb
+++ b/app/views/stuffs/show.html.erb
@@ -19,8 +19,12 @@
           <% if user_signed_in? %>
             <%= @stuff.user.username if @stuff.user%>
           <% end %>
-          </p><!--if @stuff.user ne treba-->
-          <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#exampleModal">
+          </p>
+          <div type="button" class="popup btn btn-outline-info" onclick="myFunction()"> <%= fa_icon 'phone' %> Click for phone number
+            <span class="popuptext" id="myPopup"><%= @stuff.user.phone_number %></span>
+          </div>
+
+          <!--<button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#exampleModal">
             <%= fa_icon 'phone' %> Show mobile phone
           </button>
 
@@ -41,7 +45,8 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
+
         </div>
       </div>
     </div>
@@ -58,3 +63,11 @@
     <% end %> 
   </div>
 </div>
+
+<script>
+// When the user clicks on div, open the popup
+function myFunction() {
+  var popup = document.getElementById("myPopup");
+  popup.classList.toggle("show");
+}
+</script>
