--- a/app/views/stuffs/find_stuffs.html.erb
+++ b/app/views/stuffs/find_stuffs.html.erb
@@ -1,5 +1,5 @@
-<div class="d-flex flex-wrap">
-  <% @stuffs.each do |stuff| %>
+<div class="d-flex flex-wrap justify-content-start">
+  <% Stuff.found_stuf.each do |stuff| %>
     <div class="card mx-auto mb-3" style="width: 540px;">
       <div class="row g-0">
         <div class="col-md-4">
