--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
   </head>
     
   <body class="d-flex flex-column">
-    <%= render 'layouts/navigation'%>
+    <%= render 'shared/navigation'%>
     <div id="messages-container">
-      <%= render 'layouts/messages' %>
+      <%= render 'shared/messages' %>
     </div>
     <%= yield %>
   </body>
