--- a/app/views/stuffs/index.html.erb
+++ b/app/views/stuffs/index.html.erb
@@ -1,9 +1,35 @@
-<%= render 'layouts/search' %>
-
-<%= render 'stuffs' %>
 
 <!--<%= link_to 'New Stuff', new_stuff_path %>-->
+<div>
+  <div class="container col-sm-10">
+    <div class="row">
+      <div class="col-sm-2 my-5">
+        <h1 class="my-4">Stuffs</h1>
+        <div class="list-group list-border">
+          <a><%= link_to 'New Stuff', new_stuff_path, class:'new-btn btn btn-primary' %></a>
+          <a><%= link_to 'My account', edit_user_registration_path(@user), class:'btn btn-warning my-2' %></a>
+          <a href="#" class="list-group-item">Category 3</a>
+        </div>
+      </div>
+      <div class="col-sm-6 my-5">
+        <img class="img-fluid rounded mb-4 mb-lg-0" src="http://placehold.it/900x400" alt="">
+      </div>
+      <div class="col-sm-4 my-5">
+        <h1 class="font-weight-light">Business Name or Tagline</h1>
+        <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
+        <a class="btn btn-primary" href="#">Call to Action!</a>
+      </div>
+    </div>
+    <div class="dropdown-divider my-5"></div>
+    <%= render 'shared/search' %>
+    <%= render 'stuffs' %>
+  </div>
 
-<div class="container rounded apple_pagination mb-4" id="pagination-container">
-  <%= will_paginate @stuffs, :container => false %>
+  <div class="container rounded apple_pagination mb-4 my-5" id="pagination-container">
+    <%= will_paginate @stuffs, :container => false %>
+  </div>
 </div>
+<%= render 'shared/footer' %>
+
+
+ 
