--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -39,7 +39,7 @@
       <% if !current_user.admin? %>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <%= link_to 'Categories', categories_path, class:"nav-link", admin: false %>
+            <%= link_to 'Categories', categories_path, class:"nav-link", style: "color: white", admin: false %>
           </li>
         </ul>
       <% end %>
