--- a/app/views/stuffs/index.html.erb
+++ b/app/views/stuffs/index.html.erb
@@ -11,13 +11,19 @@
           <a href="#" class="list-group-item">Category 3</a>
         </div>
       </div>
-      <div class="col-sm-6 my-5">
-        <img class="img-fluid rounded mb-4 mb-lg-0" src="http://placehold.it/900x400" alt="">
+      <div class="col-sm-5 my-5">
+        <div class="icon-position">
+          <a class="fa fa-search-plus my-3" style="font-size: 75px" href="find_stuffs"></a>
+          <p class="counter" data-target="<%= Stuff.found_stuf.count %>"></p>
+          <p style="font-size: 40px">found stuffs</p>
+        </div>
       </div>
-      <div class="col-sm-4 my-5">
-        <h1 class="font-weight-light">Business Name or Tagline</h1>
-        <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
-        <a class="btn btn-primary" href="#">Call to Action!</a>
+      <div class="col-sm-5 my-5">
+        <div class="icon-position">
+          <a class="fa fa-search my-3" style="font-size: 75px" href="lost_stuffs"></a>
+          <p class="counter" data-target="<%= Stuff.lost_stuf.count %>"></p>
+          <p style="font-size: 40px">lost stuffs</p>
+        </div>
       </div>
     </div>
     <div class="dropdown-divider my-5"></div>
@@ -31,5 +37,33 @@
 </div>
 <%= render 'shared/footer' %>
 
+<script>
+var counters = document.querySelectorAll('.counter');
+var speed = 5000; // The lower the slower
 
- 
+counters.forEach(counter => {
+	const updateCount = () => {
+		const target = +counter.getAttribute('data-target');
+		const count = +counter.innerHTML;
+
+		// Lower inc to slow and higher to slow
+		const inc = target / speed;
+
+		// console.log(inc);
+		// console.log(count);
+
+		// Check if target is reached
+		if (count < target) {
+			// Add inc to count and output in counter
+			counter.innerHTML = Math.ceil(count + inc);
+			// Call function every ms
+			setTimeout(updateCount, 1);
+		} else {
+			counter.innerHTML = target;
+		}
+	};
+
+	updateCount();
+});
+								
+</script>
