finished home page style

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,6 +28,13 @@
   text-decoration: none;
 }
 
+.new-btn {
+  background-color:  #152F4F;
+}
+.my-acc {
+  background-color: #ffc107;
+}
+
 //navbar icon
 .bg-iconnav {
   background:#ffc107;
