--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -45,7 +45,7 @@
       <% end %>
       <ul class="navbar-nav ml-auto">
         <li class="user-name nav-item">
-          <%= fa_icon 'user' %> <%= link_to current_user.full_name, edit_user_registration_path, class:'name' %> <%= "(Admin)" if current_user.admin? %>
+          <%= fa_icon 'user' %> <%= current_user.full_name %> <%= "(Admin)" if current_user.admin? %>
         </li>
         <li class="log-out nav-item">
           <%= link_to("Logout", destroy_user_session_path,
