--- a/app/views/stuffs/_stuffs.html.erb
+++ b/app/views/stuffs/_stuffs.html.erb
@@ -1,6 +1,6 @@
 <div class="d-flex flex-wrap">
   <% @stuffs.each do |stuff| %>
-    <div class="card mx-auto mb-3" style="width: 540px;">
+    <div class="card container mb-3" style="width: 540px;">
       <div class="row g-0">
         <div class="col-md-4">
           <%= image_tag(stuff.stuff_image) %>
